--- a/.github/workflows/linux_openvino_ci.yml
+++ b/.github/workflows/linux_openvino_ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main, 'rel-*' ]
   pull_request:
-    branches: [ main, 'rel-*' ]
+    branches: ['**' ]
   workflow_dispatch:
 
 concurrency:
