check internal ci

--- a/.github/workflows/reusable_linux_build.yml
+++ b/.github/workflows/reusable_linux_build.yml
@@ -65,8 +65,7 @@ on:
 
 jobs:
   build_test_pipeline:
-    runs-on:
-      - runs-on: [self-hosted, Linux, X64]
+    runs-on: [self-hosted, Linux, X64]
     permissions:
       contents: read
       packages: write
